plugins {
    id 'java'
    id 'io.quarkus'
    id 'io.freefair.lombok' //version '6.1.0'
}
dependencies {
    implementation enforcedPlatform(project(':bom'))

    implementation project(':model')
    implementation project(':commons')
    implementation project(':app')
    implementation project(':database:apid')
    implementation project(':database:postgresql')
    implementation project(':database:redis')
    //implementation 'io.quarkus:quarkus-oidc'
    implementation 'io.quarkus:quarkus-config-yaml'
    implementation 'io.quarkus:quarkus-vertx'
    implementation 'io.quarkus:quarkus-vertx-web'
    implementation 'io.quarkus:quarkus-scala'
    implementation 'io.quarkus:quarkus-flyway'
    implementation 'io.quarkus:quarkus-flyway-deployment'
    implementation 'io.vertx:vertx-redis-client'

    implementation('org.flywaydb:flyway-core:7.3.1') // { exclude module: 'net.milkbowl:vault:1.2.27' }


    implementation 'io.quarkus:quarkus-resteasy-jsonb'
    implementation 'io.quarkus:quarkus-resteasy-mutiny'
    implementation "io.smallrye.reactive:mutiny"
    implementation 'io.smallrye.reactive:smallrye-mutiny-vertx-web-client'
    implementation 'io.smallrye.reactive:smallrye-mutiny-vertx-pg-client'

    implementation 'org.elasticsearch:elasticsearch:7.14.0'

    implementation group: 'org.apache.commons', name: 'commons-lang3'

    implementation group: 'org.apache.logging.log4j', name: 'log4j-api'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
    compileOnly "org.projectlombok:lombok:${lombokVer}"
    annotationProcessor "org.projectlombok:lombok:${lombokVer}"

    testCompileOnly "org.projectlombok:lombok:${lombokVer}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVer}"
}

repositories {
    mavenLocal()
    mavenCentral()
}

group 'com.example.jcc.quarkus'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileJava {
    options.compilerArgs.addAll(["--add-opens", "java.base/jdk.internal.misc=ALL-UNNAMED"])
}

/**
 * Remove migration SQLs from being packaged in resulting jar
 */
apply plugin: 'distribution'

distributions {
    main {
        distributionBaseName = "${project.name}"
        contents {
            into('/') {
                from('src/main/resources/db/migration/')
                exclude("*.sql")
            }
        }
    }
}
processResources.enabled = true

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}
